--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "laravel/socialite": "3.*",
-        "codecourse/notify": "^1.1"
+        "codecourse/notify": "^1.1",
+        "laravel/socialite": "2.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
